--- a/101304007.github.io/calculator.html
+++ b/101304007.github.io/calculator.html
@@ -1,29 +1,73 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<link type="text/css" rel="stylesheet" href="app.css">
-	<meta charset="UTF-8">
-    <title>caculator</title>
-	<h2 >?My calculator</h2>
-
+    <meta charset="UTF-8">
+    <title>Calculator</title>
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="app.js"></script>
-
-	<style type=text/css>
-<!--
-body{
-background-image:url(https://www.google.com.tw/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0CAcQjRw&url=http%3A%2F%2Fwww.syhobby.com%2Fproducts_show.php%3Fsn%3D12943&ei=FhkYVaKyPMSm8AWghYBg&psig=AFQjCNEH7iAD5hJSiS6dRPbbHpagVlnpag&ust=1427729045319293);
-background-position:0% 50%;
-background-attachment:fixed;
-background-repeat:no-repeat;}
--->
-</style>
+    <link rel="stylesheet" type="text/css" href="app.css">
 </head>
-
-<body>
-<div td align="left" >
-    <div class='large'>
-        <p id="message">0</p>
-        <p id="operator">@</p>
-    </div>
+    <body>
+    <p id="message"></p>
+        <div>
+            <button id ="btn7">7</button>
+            <button id ="btn8">8</button>
+            <button id ="btn9">9</button>
+            <button id ="btnAdd">＋</button>
+        </div>
+        <div>
+            <button id ="btn4">4</button>
+            <button id ="btn5">5</button>
+            <button id ="btn6">6</button>
+            <button id ="btnMinus">-</button>
+        </div>
+        <div>
+            <button id ="btn1">1</button>
+            <button id ="btn2">2</button>
+            <button id ="btn3">3</button>
+            <button id ="btnMultiple">*</button>
+        </div>
+        <div>
+            <button id ="btnClear">c</button>
+            <button id ="btn0">0</button>
+            <button id ="btnEqual">=</button>
+            <button id ="btnDivide">/</button>
+        </div>
+    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Calculator</title>
+    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="app.js"></script>
+    <link rel="stylesheet" type="text/css" href="app.css">
+</head>
+    <body>
+    <p id="message"></p>
+        <div>
+            <button id ="btn7">7</button>
+            <button id ="btn8">8</button>
+            <button id ="btn9">9</button>
+            <button id ="btnAdd">＋</button>
+        </div>
+        <div>
+            <button id ="btn4">4</button>
+            <button id ="btn5">5</button>
+            <button id ="btn6">6</button>
+            <button id ="btnMinus">-</button>
+        </div>
+        <div>
+            <button id ="btn1">1</button>
+            <button id ="btn2">2</button>
+            <button id ="btn3">3</button>
+            <button id ="btnMultiple">*</button>
+        </div>
+        <div>
+            <button id ="btnClear">c</button>
+            <button id ="btn0">0</button>
+            <button id ="btnEqual">=</button>
+            <button id ="btnDivide">/</button>
+        </div>
+    </body>
+</html>
